Wedge z-index issues

--- a/src/assets/scss/customizer/edit.scss
+++ b/src/assets/scss/customizer/edit.scss
@@ -3,14 +3,11 @@ button[data-control]:before {
   display: inline-block;
   -webkit-font-smoothing: antialiased;
   font: normal 20px/1 'dashicons';
-  vertical-align: top;
-}
+  vertical-align: top; }
 
 button[data-control] {
   font-size: 14px;
   font-family: monospace;
-  /* line-height: 16px; */
-  /* margin: 0px; */
   padding: 5px;
   text-decoration: none;
   color: #000;
@@ -18,11 +15,10 @@ button[data-control] {
   opacity: 0.5;
   border-radius: 4px;
   border: 0px;
-  z-index: 10;
+  z-index: 210;
   position: absolute;
   top: 0px;
-  right: 0px;
-}
+  right: 0px; }
 
 button[data-control]:hover,
 button[data-control].highlight-button {
@@ -31,30 +27,23 @@ button[data-control].highlight-button {
   color: #fff;
   -webkit-box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.5);
-  box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.5);
-}
+  box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.5); }
 
 .dialog-hidden {
-  display: none;
-}
+  display: none; }
 
 .ui-dialog {
-  color: #000;
-}
+  color: #000; }
 
 /* Simulate wp-core-ui's button-primary */
 .ui-dialog-buttonset button:first-of-type {
-	background: #0085ba;
-	border-color: #0073aa #006799 #006799;
-	-webkit-box-shadow: 0 1px 0 #006799;
-	box-shadow: 0 1px 0 #006799;
-	color: #fff;
-	text-decoration: none;
-	text-shadow: 0 -1px 1px #006799,
-		1px 0 1px #006799,
-		0 1px 1px #006799,
-		-1px 0 1px #006799;
-}
+  background: #0085ba;
+  border-color: #0073aa #006799 #006799;
+  -webkit-box-shadow: 0 1px 0 #006799;
+  box-shadow: 0 1px 0 #006799;
+  color: #fff;
+  text-decoration: none;
+  text-shadow: 0 -1px 1px #006799, 1px 0 1px #006799, 0 1px 1px #006799, -1px 0 1px #006799; }
 
 #target-highlight {
   position: absolute;
@@ -63,8 +52,7 @@ button[data-control].highlight-button {
   width: 0px;
   height: 0px;
   background: rgba(255, 255, 255, 0.5);
-  z-index: 5;
+  z-index: 200;
   -webkit-box-shadow: 0px 0px 10px 2px rgba(249, 91, 38, 0.5);
   -moz-box-shadow: 0px 0px 10px 2px rgba(249, 91, 38, 0.5);
-  box-shadow: 0px 0px 10px 2px #f95b26;
-}
+  box-shadow: 0px 0px 10px 2px #f95b26; }
